# Vyre

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
Models/: AccessPointModel.cs  RecommendationModel.cs  ReportSummaryModel.cs
Services/: DummyWifiEngine.cs  FileReportStore.cs  IReportStore.cs  ISettingsStore.cs  IWifiEngine.cs  PreferencesSettingsStore.cs
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StaticAnalysis.cmake
docs/: report-schema.md
tests/: CMakeLists.txt  test_core.cpp  test_interop_boundary.cpp  test_report_export.cpp
wifi-core/: CMakeLists.txt
wifi-core/include/wifi/: access_point.hpp  export.hpp  issue.hpp  recommendation.hpp  report.hpp  scan_error.hpp  scan_result.hpp  scanner.hpp  schema.hpp  util.hpp
wifi-core/include/wifi_core/: version.h.in  wifi_core.h
wifi-core/src/: wifi_core.cpp
wifi-core/src/export/: csv.cpp  json.cpp
wifi-core/src/platform/windows/: scanner_wlanapi.cpp
wifi-core/tests/: test_windows_mapping.cpp
wifi-interop/: CMakeLists.txt
wifi-interop/include/: wifi_api.h
wifi-interop/include/wifi_interop/: wifi_capi.h
wifi-interop/src/: wifi_api.cpp  wifi_capi.cpp
wifi-ui-maui/: Vyre.Maui.sln
wifi-ui-maui/src/Vyre.Maui/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  Vyre.Maui.csproj
wifi-ui-maui/src/Vyre.Maui/Models/: AppSettings.cs  IssueModel.cs  ReportSummaryModel.cs  ScanFilterModel.cs
wifi-ui-maui/src/Vyre.Maui/Services/: IWifiEngine.cs  WifiNative.cs  WindowsWifiEngine.cs
wifi-ui-maui/src/Vyre.Maui/ViewModels/: BaseViewModel.cs  DoctorViewModel.cs  InsightsViewModel.cs  ReportsViewModel.cs  ScanViewModel.cs  SettingsViewModel.cs
wifi-ui-maui/src/Vyre.Maui/Views/: DoctorPage.xaml  DoctorPage.xaml.cs  InsightsPage.xaml  InsightsPage.xaml.cs  ReportsPage.xaml  ReportsPage.xaml.cs  ScanPage.xaml  ScanPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
wifi-ui-maui/tests/Vyre.Maui.Tests/: UnitTest1.cs  Vyre.Maui.Tests.csproj
